--- a/Ticky.Web/wwwroot/css/app.css
+++ b/Ticky.Web/wwwroot/css/app.css
@@ -1,4 +1,4 @@
-/*! tailwindcss v4.1.17 | MIT License | https://tailwindcss.com */
+/*! tailwindcss v4.1.18 | MIT License | https://tailwindcss.com */
 @layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
@@ -2207,6 +2207,7 @@ input[type="checkbox"].toggle {
   position: relative;
   height: calc(var(--spacing) * 6);
   width: calc(var(--spacing) * 10);
+  min-width: calc(var(--spacing) * 10) !important;
   cursor: pointer;
   border-radius: calc(infinity * 1px);
   border-style: var(--tw-border-style);
